--- a/javajam/javajam.css
+++ b/javajam/javajam.css
@@ -3,7 +3,10 @@
 body {
     background-color: #FCEBB6;
     color: #221811;
-    font-family: "Arial";
+    background-image: url(images/fadedroad50.jpg);
+    background-repeat: no-repeat;
+    background-attachment: fixed;
+    background-size: cover;
 
 }
 
@@ -11,33 +14,55 @@ header {
     color: #8C3826;
     background-color: #D2B48C;
     text-align: center;
-    font-family: 'Itim', cursive;
+    padding-top: 5px;
+    padding-bottom: 5px;
 
 }
 
 h1 {
-    line-height: 200%;
+    font-size: 3em;
 
 }
 
 h2 {
     color: #8C3826;
-    font-family: 'Itim', cursive;
 
+
+}
+
+h3 {
+    color: #8C3826;
+}
+
+dt {
+    color: #8C3826;
+}
+
+h4 {
+    background-color: #D2B48C;
+    font-size: 1.2em;
+    padding-left: .5em;
+    padding-bottom: .25em;
 }
 
 nav {
     text-align: center;
     font-weight: bold;
+    font-size: 1.5em;
+    padding-top: 5px;
+    padding-bottom: 5px;
 
 }
 
-footer {
-    background-color: #D2B48C;
-    font-size: .60em;
-    font-style: italic;
-    text-align: center;
+nav a {
+    text-decoration: none;
+}
 
+main {
+    display: block;
+	padding-left: 2em;
+	padding-right: 2em;
+	padding-bottom: 2em;
 }
 
 #wrapper {
@@ -45,5 +70,37 @@ footer {
     background-color: #FEFAEB;
     margin-right: auto;
     margin-left: auto;
+    font-family: 'Itim', cursive;
+    min-width: 900px;
+    max-width: 1280px;
+    box-shadow: 3px 3px 3px black;
+
+}
+
+details {
+    padding-left: 20%;
+    padding-right: 20%;
+}
+
+img {
+    padding-left: 10px;
+    padding-right: 10px;
+}
+
+#homehero {
+    height: 300px;
+    background-image: url(images/hero.jpg);
+    background-repeat: no-repeat;
+    background-size: cover;
+}
+
+
+footer {
+    background-color: #D2B48C;
+    font-size: .60em;
+    font-style: italic;
+    text-align: center;
+    padding: 1em;
+    border-top: 2px solid #8C3826;
 
 }
