--- a/javajam/javajam.css
+++ b/javajam/javajam.css
@@ -83,9 +83,9 @@ details {
 }
 
 img {
-    padding-left: 10px;
-    padding-right: 10px;
-}
+    border-style: none;
+    max-width: 100%;
+    height: auto;}
 
 #homehero {
     height: 300px;
