--- a/javajam/javajam.css
+++ b/javajam/javajam.css
@@ -1,5 +1,9 @@
 @import url('https://fonts.googleapis.com/css2?family=Itim&display=swap');
 
+* {
+    box-sizing: border-box;
+}
+
 body {
     background-color: #FCEBB6;
     color: #221811;
@@ -7,16 +11,32 @@ body {
     background-repeat: no-repeat;
     background-attachment: fixed;
     background-size: cover;
-
 }
 
 header {
-    color: #8C3826;
+    color: #231814;
     background-color: #D2B48C;
-    text-align: center;
+    background-image: url(images/coffeelogo.jpg);
+    background-repeat: no-repeat;
     padding-top: 5px;
     padding-bottom: 5px;
+    padding-left: 240px;
+}
 
+header a {
+    text-decoration: none;
+}
+
+header a:link {
+    color: #231814;
+}
+
+header a:visited {
+    color: #231814;
+}
+
+header a:hover {
+    color: #FEF6C2;
 }
 
 h1 {
@@ -26,8 +46,6 @@ h1 {
 
 h2 {
     color: #8C3826;
-
-
 }
 
 h3 {
@@ -41,16 +59,22 @@ dt {
 h4 {
     background-color: #D2B48C;
     font-size: 1.2em;
+    text-transform: uppercase;
     padding-left: .5em;
-    padding-bottom: .25em;
+    padding-bottom: 0;
+    border-bottom: 1px solid #221811;
+    clear: left;
+
 }
 
 nav {
-    text-align: center;
+    float: left;
     font-weight: bold;
+    text-align: center;
     font-size: 1.5em;
     padding-top: 5px;
     padding-bottom: 5px;
+    width: 200px;
 
 }
 
@@ -58,42 +82,100 @@ nav a {
     text-decoration: none;
 }
 
-main {
-    display: block;
-	padding-left: 2em;
-	padding-right: 2em;
-	padding-bottom: 2em;
+nav a:link {
+    color: #FEF6C2;
 }
 
-#wrapper {
-    width: 80%;
-    background-color: #FEFAEB;
-    margin-right: auto;
-    margin-left: auto;
-    font-family: 'Itim', cursive;
-    min-width: 900px;
-    max-width: 1280px;
-    box-shadow: 3px 3px 3px black;
+nav a:visited {
+    color: #D2B48C;
+}
 
+nav a:hover {
+    color: #CC9933;
+}
+
+nav ul {
+    padding-left: 0;
+    list-style-type: none;
+}
+
+main {
+    display: block;
+    background-color: #FEF6C2;
+    padding-left: 0;
+    padding-right: 0;
+    padding-bottom: 2em;
+    padding-top: 0;
+    margin-left: 200px;
+    overflow: auto;
+}
+
+main h2,
+h3,
+h4,
+p,
+div,
+ul,
+dl {
+    padding-left: 3em;
+    padding-right: 2em;
 }
 
 details {
     padding-left: 20%;
     padding-right: 20%;
+    overflow: auto;
 }
 
 img {
     border-style: none;
     max-width: 100%;
-    height: auto;}
+    height: auto;
+}
+
+.onethird {
+    float: left;
+    width: 33%;
+}
+
+.floatleft {
+    float: left;
+    padding-right: 2em;
+    padding-left: 2em;
+}
+
+#wrapper {
+    background-color: #231814;
+    margin-left: auto;
+    margin-right: auto;
+    width: 80%;
+    min-width: 900px;
+    max-width: 1280px;
+    box-shadow: 3px 3px 3px #676767;
+    padding: 0;
+    font-family: 'Itim', cursive;
+}
 
 #homehero {
     height: 300px;
     background-image: url(images/hero.jpg);
     background-repeat: no-repeat;
-    background-size: cover;
+    background-size: 100% 100%;
 }
 
+#heromugs {
+    height: 300px;
+    background-image: url(images/heromugs.jpg);
+    background-repeat: no-repeat;
+    background-size: 100% 100%;
+}
+
+#heroguitar {
+    height: 300px;
+    background-image: url(images/heroguitar.jpg);
+    background-repeat: no-repeat;
+    background-size: 100% 100%;
+}
 
 footer {
     background-color: #D2B48C;
