--- a/javajam/javajam.css
+++ b/javajam/javajam.css
@@ -4,23 +4,23 @@
     box-sizing: border-box;
 }
 
+/* Small Layout */
+
 body {
-    background-color: #FCEBB6;
+    background-color: #D2B48C;
     color: #221811;
-    background-image: url(images/fadedroad50.jpg);
-    background-repeat: no-repeat;
-    background-attachment: fixed;
-    background-size: cover;
+    margin: 0;
 }
 
 header {
     color: #231814;
     background-color: #D2B48C;
-    background-image: url(images/coffeelogo.jpg);
+    background-image: url(images/cup.jpg);
     background-repeat: no-repeat;
     padding-top: 5px;
     padding-bottom: 5px;
-    padding-left: 240px;
+    padding-left: 105px;
+    height: 128px;
 }
 
 header a {
@@ -40,7 +40,7 @@ header a:hover {
 }
 
 h1 {
-    font-size: 3em;
+    font-size: 2em;
 
 }
 
@@ -68,14 +68,8 @@ h4 {
 }
 
 nav {
-    float: left;
-    font-weight: bold;
     text-align: center;
     font-size: 1.5em;
-    padding-top: 5px;
-    padding-bottom: 5px;
-    width: 200px;
-
 }
 
 nav a {
@@ -95,8 +89,21 @@ nav a:hover {
 }
 
 nav ul {
-    padding-left: 0;
+    display: flex;
+    flex-direction: column;
+    margin: 0;
+    padding: 0;
+    font-size: 1.25em;
     list-style-type: none;
+}
+
+nav li {
+    padding-top: .5em;
+    padding-bottom: .5em;
+    padding-left: 1em;
+    padding-right: 1em;
+    width: 100%;
+    border-bottom: 1px solid #FEF6C2;
 }
 
 main {
@@ -106,19 +113,21 @@ main {
     padding-right: 0;
     padding-bottom: 2em;
     padding-top: 0;
-    margin-left: 200px;
-    overflow: auto;
 }
 
-main h2,
+main ul {
+    padding-left: 2em;
+}
+
+h2,
 h3,
 h4,
 p,
 div,
 ul,
 dl {
-    padding-left: 3em;
-    padding-right: 2em;
+    padding-left: 1em;
+    padding-right: 1em;
 }
 
 details {
@@ -133,48 +142,39 @@ img {
     height: auto;
 }
 
-.onethird {
-    float: left;
-    width: 33%;
-}
-
-.floatleft {
-    float: left;
-    padding-right: 2em;
-    padding-left: 2em;
-}
-
 #wrapper {
     background-color: #231814;
-    margin-left: auto;
-    margin-right: auto;
-    width: 80%;
-    min-width: 900px;
-    max-width: 1280px;
-    box-shadow: 3px 3px 3px #676767;
     padding: 0;
     font-family: 'Itim', cursive;
 }
 
 #homehero {
     height: 300px;
-    background-image: url(images/hero.jpg);
+    background-image: url(images/road.jpg);
     background-repeat: no-repeat;
     background-size: 100% 100%;
 }
 
 #heromugs {
     height: 300px;
-    background-image: url(images/heromugs.jpg);
+    background-image: url(images/threemugs.jpg);
     background-repeat: no-repeat;
     background-size: 100% 100%;
 }
 
 #heroguitar {
     height: 300px;
-    background-image: url(images/heroguitar.jpg);
+    background-image: url(images/guitar.jpg);
     background-repeat: no-repeat;
     background-size: 100% 100%;
+}
+
+#mobile {
+    display: inline;
+}
+
+#desktop {
+    display: none;
 }
 
 footer {
@@ -184,5 +184,101 @@ footer {
     text-align: center;
     padding: 1em;
     border-top: 2px solid #8C3826;
+}
 
+/* Medium Layout */
+
+@media (min-width: 600px) {
+    header {
+        text-align: center;
+        padding-left: 0;
+    }
+
+    h1 {
+        font-size: 3em;
+    }
+
+    nav ul {
+        flex-flow: row nowrap;
+        justify-content: space-around;
+    }
+
+    nav li {
+        border-bottom: none;
+    }
+
+    #homehero {
+        height: 50vh;
+        background-image: url(images/hero.jpg);
+    }
+
+    #heromugs {
+        background-image: url(images/heromugs.jpg);
+    }
+
+    #heroguitar {
+        background-image: url(images/heroguitar.jpg);
+    }
+
+    #flow {
+        display: flex;
+        flex-direction: row;
+    }
+
+    #mobile {
+        display: none;
+    }
+
+    #desktop {
+        display: inline;
+    }
+
+    .details {
+        display: flex;
+        flex-direction: row;
+    }
+
+    h4 {
+        margin-left: 10%;
+        margin-right: 10%;
+    }
+}
+
+/* Large Layout */
+
+@media (min-width: 1024px) {
+    @supports (display: grid) {
+        header {
+            grid-area: header;
+        }
+
+        nav {
+            grid-area: nav;
+        }
+
+        main {
+            grid-area: main;
+        }
+
+        footer {
+            grid-area: footer;
+        }
+
+        #wrapper {
+            display: grid;
+            grid-template:
+                "header header"
+                "nav    main"
+                "footer footer"
+                / 200px;
+        }
+
+        nav ul {
+            flex-direction: column;
+        }
+
+        header {
+            background-image: url(images/coffeelogo.jpg)
+        }
+    }
 }
