--- a/javajam/javajam.css
+++ b/javajam/javajam.css
@@ -169,12 +169,46 @@ img {
     background-size: 100% 100%;
 }
 
+form {
+    display: flex;
+    flex-direction: column;
+    padding-left: 1em;
+    width: 80%;
+}
+
+input,
+textarea {
+    margin-bottom: .5em;
+}
+
 #mobile {
     display: inline;
 }
 
 #desktop {
     display: none;
+}
+
+table {
+    margin: auto;
+    border-spacing: 0;
+    width: 90%;
+}
+
+th,
+td {
+    padding: 10px;
+}
+
+tr:nth-of-type(odd) {
+    background-color: #d2b48e;
+}
+
+#herojobs {
+    height: 300px;
+    background-image: url(images/coffeecup.jpg);
+    background-repeat: no-repeat;
+    background-size: 100% 100%;
 }
 
 footer {
@@ -242,6 +276,23 @@ footer {
         margin-left: 10%;
         margin-right: 10%;
     }
+}
+
+form {
+    width: 40%;
+    display: grid;
+    grid-gap: 1em;
+    gap: 1em;
+    grid-template-columns: 6em 1fr;
+}
+
+input [type="submit"] {
+    grid-column: 2/3;
+    width: 9em;
+}
+
+#herojobs {
+    background-image: url(images/herojobs.jpg);
 }
 
 /* Large Layout */
